# MyCo_v3

./: README.md  pyproject.toml  train_model.py
scripts/: pipeline_check.py  test_pipeline.py  train_myco.sbatch
src/myco/: __init__.py  annotations.py  augment.py  callbacks.py  data.py  eval.py  histoplus.py  inference.py  model.py  performance.py  utils.py  visualization.py
tests/: test_augment.py  test_callbacks.py  test_data.py  test_eval.py  test_histoplus.py  test_model.py  test_performance.py  test_train_model.py  test_visualization.py
